# glue-vispy-viewers

./: .coveragerc  .install-opengl.ps1  .travis.yml  CHANGES.md  LICENSE  MANIFEST.in  README.md  README.rst  RELEASE.rst  appveyor.yml  azure-pipelines.yml  setup.cfg  setup.py  test.py  tox.ini
.circleci/: config.yml
.continuous-integration/appveyor/: install-miniconda.ps1
.github/workflows/: ci_workflows.yml
data-cube/: config.py  volume_modify.py
glue_vispy_viewers/: __init__.py  conftest.py  utils.py
glue_vispy_viewers/common/: axes.py  axis.py  color_box.py  compat.py  layer_artist.py  layer_state.py  new_toolbar.py  selection_tools.py  state.py  toolbar.py  tools.py  viewer_options.py  viewer_options.ui  viewer_state.py  vispy_data_viewer.py  vispy_viewer.py  vispy_widget.py
glue_vispy_viewers/common/jupyter/: toolbar.py
glue_vispy_viewers/common/qt/: data_viewer.py  toolbar.py  tools.py  viewer_options.py  viewer_options.ui
glue_vispy_viewers/common/qt/tests/: test_vispy_toolbar.py  test_vispy_viewer.py
glue_vispy_viewers/common/tests/: test_3d_axis_visual.py  test_vispy_toolbar.py  test_vispy_viewer.py  test_vispy_widget.py  util.py
glue_vispy_viewers/compat/: axis.py  text.py
glue_vispy_viewers/isosurface/: __init__.py  iso_glue_viewer.py  iso_vispy_widget.py  isosurface_toolbar.py  isosurface_viewer.py  isosurface_visual.py  layer_artist.py  layer_state.py  layer_style_widget.py  layer_style_widget.ui  multi_iso_visual.py  options_widget.py  options_widget.ui  viewer_state.py
glue_vispy_viewers/isosurface/tests/: test_iso_glueViewer.py  test_iso_vispyWidget.py  test_isosurface_viewer.py
glue_vispy_viewers/qt/tests/: test_session_back_compat.py
glue_vispy_viewers/qt/tests/data/: scatter_volume_selection.glu  scatter_volume_v1.glu
glue_vispy_viewers/scatter/: __init__.py  layer_artist.py  layer_state.py  layer_style_widget.py  layer_style_widget.ui  multi_scatter.py  options_widget.py  options_widget.ui  scat_vispy_viewer.py  scat_vispy_widget.py  scatter_toolbar.py  scatter_viewer.py  viewer_state.py
glue_vispy_viewers/scatter/jupyter/: __init__.py  layer_state_widget.py  layer_state_widget.vue  scatter_viewer.py  viewer_state_widget.py  viewer_state_widget.vue
glue_vispy_viewers/scatter/jupyter/tests/: test_viewer.py  test_visual.py
glue_vispy_viewers/scatter/qt/: __init__.py  layer_style_widget.py  layer_style_widget.ui  scatter_viewer.py
glue_vispy_viewers/scatter/qt/tests/: test_scatter_viewer.py  test_visual.py
glue_vispy_viewers/scatter/tests/: scenes.py  state_widgets.ipynb  test_scat_viewer.py  test_scat_widget.py  test_scatter_viewer.py  test_visual.py
glue_vispy_viewers/scatter/tests/data/: state_widgets.ipynb
glue_vispy_viewers/tests/: data.py  helpers.py  test_session_back_compat.py
glue_vispy_viewers/tests/data/: multiple_volumes_v1.glu  multiple_volumes_v2.glu  scatter_volume_selection.glu  scatter_volume_v0.glu  scatter_volume_v1.glu
glue_vispy_viewers/tests/images/: py311-test-visual.json  py311-test-visualjupyter.json  py311-test-visualqt.json
glue_vispy_viewers/volume/: __init__.py  backports.py  colors.py  floodfill_scipy.py  layer_artist.py  layer_state.py  layer_style_widget.py  layer_style_widget.ui  options_widget.py  options_widget.ui  shaders.py  subset_volume.py  viewer_state.py  vol_glue_viewer.py  vol_vispy_widget.py  volume_toolbar.py  volume_viewer.py  volume_visual.py  volume_visual_legacy.py
glue_vispy_viewers/volume/jupyter/: __init__.py  layer_state_widget.py  layer_state_widget.vue  viewer_state_widget.py  viewer_state_widget.vue  volume_viewer.py
glue_vispy_viewers/volume/jupyter/tests/: test_viewer.py  test_visual.py
glue_vispy_viewers/volume/qt/: __init__.py  layer_style_widget.py  layer_style_widget.ui  slice_widget.py  volume_viewer.py
glue_vispy_viewers/volume/qt/tests/: test_visual.py  test_volume_toolbar.py  test_volume_viewer.py
glue_vispy_viewers/volume/tests/: scenes.py  test_colors.py  test_glue_viewer.py  test_vispy_widget.py  test_visual.py  test_volume_toolbar.py  test_volume_viewer.py
glue_vispy_viewers/volume/tests/data/: state_widgets.ipynb
vispy_isosurface/: __init__.py  iso_gluePlugin.py  iso_glueViewer.py  iso_vispyWidget.py  isosurface_viewer.py  options_widget.py
vispy_isosurface/tests/: test_glue_viewer.py  test_iso_glueViewer.py  test_iso_vispyWidget.py
vispy_volume/: __init__.py  colormaps.py  config.py  glue_viewer.py  options_widget.py  options_widget.ui  vispy_widget.py  vol_glueViewer.py  vol_glue_viewer.py  vol_vispyWidget.py  vol_vispy_widget.py  volume_modify.py
vispy_volume/tests/: l1448_13co.fits  test_glue_viewer.py  test_vispy_widget.py
