[metadata]
name = glue-vispy-viewers
url = https://github.com/glue-viz/glue-3d-viewer
author = Thomas Robitaille, Penny Qian, and Maxwell Tsai
author_email = glueviz@gmail.com
description = Vispy-based viewers for Glue
long_description = file: README.rst

[options]
zip_safe = True
packages = find:
setup_requires = setuptools_scm
install_requires =
    numpy
    pyopengl
    glue-core>=1.13.1
    glue-qt>=0.1.0
    echo>=0.6
    qtpy
    scipy
    matplotlib
    vispy>=0.9.1
    importlib_metadata>=3.6; python_version<'3.10'
python_requires = >=3.8

[options.entry_points]
glue.plugins =
    vispy_volume = glue_vispy_viewers.volume:setup
    vispy_scatter = glue_vispy_viewers.scatter:setup

[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-qt
    pytest-faulthandler
    objgraph;sys_platform!='win32'
    mock
qt =
    PyQt5>=5.9
all =
    imageio

[options.package_data]
glue_vispy_viewers.common = *.ui, *.png
glue_vispy_viewers.scatter = *.ui
glue_vispy_viewers.volume = *.ui
glue_vispy_viewers.tests = data/*.glu
glue_vispy_viewers.extern = README.md, VISPY_LICENSE
glue_vispy_viewers.extern.vispy = io/_data/*.npy, html/static/js/*.js, app/tests/*.ui
glue_vispy_viewers.extern.vispy.glsl.antialias = *.vert, *.frag, *.glsl
glue_vispy_viewers.extern.vispy.glsl.arrowheads = *.vert, *.frag, *.glsl
glue_vispy_viewers.extern.vispy.glsl.arrows = *.vert, *.frag, *.glsl
glue_vispy_viewers.extern.vispy.glsl.collections = *.vert, *.frag, *.glsl
glue_vispy_viewers.extern.vispy.glsl.colormaps = *.vert, *.frag, *.glsl
glue_vispy_viewers.extern.vispy.glsl.lines = *.vert, *.frag, *.glsl
glue_vispy_viewers.extern.vispy.glsl.markers = *.vert, *.frag, *.glsl
glue_vispy_viewers.extern.vispy.glsl.math = *.vert, *.frag, *.glsl
glue_vispy_viewers.extern.vispy.glsl.misc = *.vert, *.frag, *.glsl
glue_vispy_viewers.extern.vispy.glsl.transforms = *.vert, *.frag, *.glsl
